# Aperture

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  aperture_local.db  main.js  package-lock.json  package.json  pyproject.toml  start-vnc.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
backend/: main.py
backend/api/: auth.py  ingest.py  jobs.py  logger.py  search.py
backend/core/: auth_service.py  classification_service.py  config.py  indexing_service.py  ingestion_service.py  logging_setup.py  search_service.py
backend/db/: crud.py  database.py  migrate.py  models.py
backend/db/migrations/: env.py
backend/db/migrations/versions/: 0001_initial.py
backend/models/: job.py  search.py
chroma_db/: chroma.sqlite3
frontend/: index.html
frontend/css/: style.css
frontend/js/: renderer.js
scripts/: scaffold.sh
tests/: test_api_endpoints.py  test_classification_service.py  test_health.py  test_ingestion_service.py
